main stats etched in

--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -7,16 +7,6 @@
             <h1 class="charname">
                 <input name="name" type="text" value="{{data.name}}" placeholder="Name" />
             </h1>
-            <div class="resource">
-                <input type="number" name="system.health.value" value="{{systemData.health.value}}"/>
-                <span> / </span>
-                <input type="number" name="system.health.max" value="{{systemData.health.max}}"/>
-            </div>
-            <div class="resource">
-                <input type="number" name="system.power.value" value="{{systemData.power.value}}"/>
-                <span> / </span>
-                <input type="number" name="system.power.max" value="{{systemData.power.max}}"/>
-            </div>
         </div>
     </header>
 
@@ -32,6 +22,12 @@
 
         {{!-- Biography Tab --}}
         <div class="tab description" data-group="primary" data-tab="description">
+            {{#each systemData.stats.main as |statVal statKey|}}
+                <div class="resource">
+                    <label for="systemData.stats.main.{{statKey}}">{{localize (concat "PENDRAGON." statKey)}}</label>
+                    <input type="text" name="systemData.stats.main.{{statKey}}" value="{{statVal}}"/>
+                </div>
+            {{/each}}
             {{editor biographyHTML target="system.biography" button=true editable=editable engine="prosemirror"}}
         </div>
 
