--- a/styles/pendragon.css
+++ b/styles/pendragon.css
@@ -40,7 +40,7 @@
   margin: 0;
 }
 .pendragon .resource {
-  width: 10%;
+  width: 100%;
   height: 40px;
   margin-top: 10px;
   float: left;
@@ -49,6 +49,23 @@
 .pendragon .resource input {
   width: 50px;
   height: 28px;
+}
+.pendragon .characteristics input,
+.pendragon .traits input {
+  width: 50px;
+  height: 28px;
+}
+.pendragon .traits .trait {
+  display: flex;
+}
+.pendragon .traits .trait .trait-label-cont {
+  width: 100px;
+}
+.pendragon .text-right {
+  text-align: right;
+}
+.pendragon .text-left {
+  text-align: left;
 }
 .pendragon .tabs {
   flex: 0 0 40px;
