--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -43,7 +43,7 @@
   }
 
   .resource {
-    width: 10%;
+    width: 100%;
     height: 40px;
     margin-top: 10px;
     float: left;
@@ -52,6 +52,30 @@
       width: 50px;
       height: 28px;
     }
+  }
+
+  .characteristics, .traits {
+    input {
+      width: 50px;
+      height: 28px;
+    }
+  }
+
+  .traits {
+    .trait{
+      display: flex;
+      .trait-label-cont {
+        width: 100px
+      }
+    }
+  }
+
+  .text-right {
+    text-align: right;
+  }
+
+  .text-left {
+    text-align: left;
   }
 
   /* Sheet Tabs */
