--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -34,19 +34,21 @@
         <div class="tab description" data-group="primary" data-tab="traits">
             <div class="traits">
                 {{#each data.system.traits}}
-                <div class="trait">
+                <div class="trait-duals">
                     {{#each this}}
                         {{#if @first}}
                         <input type="checkbox" name="system.traits.{{@../index}}.{{@key}}.isChecked" {{#if this.isChecked}}checked{{/if}}/>
                         <div class="trait-label-cont text-right">
-                            <label>{{localize this.label}}</label>
+                            <label class="trait rollable" data-label="localize this.label" data-value="{{this.value}}">{{localize this.label}}</label>
                         </div>
-                        <input type="text" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}"/>
+                        <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" id="trait-input-{{@key}}" disabled/>
+                        <button class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}">+</button>
                         {{/if}}
                         {{#if @last}}
-                        <input type="text" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}"/>
+                        <button class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}">+</button>
+                        <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" id="trait-input-{{@key}}" disabled/>
                         <div class="trait-label-cont text-left">
-                            <label>{{localize this.label}}</label>                            
+                            <label class="trait rollable" data-label="{{localize this.label}}" data-value="{{this.value}}">{{localize this.label}}</label>                            
                         </div>
                         <input type="checkbox" name="system.traits.{{@../index}}.{{@key}}.isChecked" {{#if this.isChecked}}checked{{/if}}/>
                         {{/if}}
