--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -38,7 +38,7 @@
                     {{#each this}}
                         {{#if @first}}
                         <input type="checkbox" name="system.traits.{{@../index}}.{{@key}}.isChecked" {{#if this.isChecked}}checked{{/if}}/>
-                        <div class="trait-label-cont text-right">
+                        <div class="trait-label-cont justify-end">
                             <label class="trait rollable" data-label="localize this.label" data-value="{{this.value}}">{{localize this.label}}</label>
                         </div>
                         <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" id="trait-input-{{@key}}" disabled/>
@@ -47,7 +47,7 @@
                         {{#if @last}}
                         <button class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}">+</button>
                         <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" id="trait-input-{{@key}}" disabled/>
-                        <div class="trait-label-cont text-left">
+                        <div class="trait-label-cont justify-start">
                             <label class="trait rollable" data-label="{{localize this.label}}" data-value="{{this.value}}">{{localize this.label}}</label>                            
                         </div>
                         <input type="checkbox" name="system.traits.{{@../index}}.{{@key}}.isChecked" {{#if this.isChecked}}checked{{/if}}/>
