--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -33,28 +33,37 @@
         </div>
 
         {{!-- Traits Tab --}}
-        <div class="tab description" data-group="primary" data-tab="traits">
+        <div class="tab traits-and-skills" data-group="primary" data-tab="traits">
             <div class="traits">
                 {{#each data.system.traits}}
-                <div class="trait-duals">
+                <div class="row">
                     {{#each this}}
-                        {{#if @first}}
-                        <input type="checkbox" name="system.traits.{{@../index}}.{{@key}}.isChecked" {{#if this.isChecked}}checked{{/if}}/>
-                        <div class="trait-label-cont justify-end">
-                            <label class="trait rollable" data-label="{{localize this.label}}" data-value="{{this.value}}">{{localize this.label}}</label>
-                        </div>
-                        <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" id="trait-input-{{@key}}" disabled/>
-                        <button class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}">+</button>
-                        {{/if}}
-                        {{#if @last}}
-                        <button class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}">+</button>
-                        <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" id="trait-input-{{@key}}" disabled/>
-                        <div class="trait-label-cont justify-start">
-                            <label class="trait rollable" data-label="{{localize this.label}}" data-value="{{this.value}}">{{localize this.label}}</label>                            
-                        </div>
-                        <input type="checkbox" name="system.traits.{{@../index}}.{{@key}}.isChecked" {{#if this.isChecked}}checked{{/if}}/>
-                        {{/if}}
+                    {{#if @first}}
+                    <input type="checkbox" name="system.traits.{{@../index}}.{{@key}}.isChecked" {{#if this.isChecked}}checked{{/if}}/>
+                    <div class="trait-label-cont justify-end">
+                        <label class="trait rollable" data-label="{{localize this.label}}" data-value="{{this.value}}">{{localize this.label}}</label>
+                    </div>
+                    <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" id="trait-input-{{@key}}" disabled/>
+                    <button class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}">+</button>
+                    {{/if}}
+                    {{#if @last}}
+                    <button class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}">+</button>
+                    <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" id="trait-input-{{@key}}" disabled/>
+                    <div class="trait-label-cont justify-start">
+                        <label class="trait rollable" data-label="{{localize this.label}}" data-value="{{this.value}}">{{localize this.label}}</label>                            
+                    </div>
+                    <input type="checkbox" name="system.traits.{{@../index}}.{{@key}}.isChecked" {{#if this.isChecked}}checked{{/if}}/>
+                    {{/if}}
                     {{/each}}
+                </div>
+                {{/each}}
+            </div>
+            <div class="general-skills">
+                {{#each data.system.skills.general}}
+                <div class="row">
+                    <input type="checkbox" name="system.skills.general.{{@key}}.isChecked" {{#if this.isChecked}}checked{{/if}}/>
+                    <label class="rollable" data-label="{{localize this.label}}" data-value="{{this.value}}">{{localize this.label}}</label>
+                    <input type="number" name="system.skills.general.{{@key}}.value" value="system.skills.general.{{@key}}.value"/>
                 </div>
                 {{/each}}
             </div>
