--- a/styles/pendragon.css
+++ b/styles/pendragon.css
@@ -79,13 +79,8 @@
   left: 0;
 }
 .pendragon .traits {
-  max-width: 300px;
+  max-width: 350px;
   margin: 1em auto;
-}
-.pendragon .traits .trait-label-cont {
-  width: 70px;
-  display: flex;
-  align-items: center;
 }
 .pendragon .traits .trait-plus {
   width: 20px;
@@ -101,18 +96,34 @@
   justify-items: center;
   align-items: center;
 }
+.pendragon .skill-row * {
+  grid-row: 1;
+}
 .pendragon .skill-row label {
   justify-self: end;
-  grid-row: 1;
   grid-column: 2;
 }
 .pendragon .skill-row input [type="checkbox"] {
-  grid-row: 1;
   grid-column: 1;
 }
 .pendragon .skill-row input [type="number"] {
-  grid-row: 1;
   grid-column: 3;
+}
+.pendragon .trait-row {
+  display: grid;
+  grid-template-columns: 28px 1fr 28px 28px 28px 28px 1fr 28px;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+}
+.pendragon .trait-row label {
+  margin: 0 0.5em;
+}
+.pendragon .trait-row .left {
+  justify-self: end;
+}
+.pendragon .trait-row .right {
+  justify-self: start;
 }
 .pendragon .row {
   display: flex;
