--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -85,13 +85,8 @@
   }
 
   .traits {
-    max-width: 300px;
+    max-width: 350px;
     margin: 1em auto;
-    .trait-label-cont {
-      width: 70px;
-      display: flex;
-      align-items: center;
-    }
     .trait-plus {
       width: 20px;
       height: 20px;
@@ -108,20 +103,31 @@
     column-gap: 0.5em;
     justify-items: center;
     align-items: center;
+    * {grid-row: 1;}
     label {
       justify-self: end;
-      grid-row: 1;
       grid-column: 2;
     }
     input {
-      [type="checkbox"] {
-        grid-row: 1;
-        grid-column: 1;
-      }
-      [type="number"] {
-        grid-row: 1;
-        grid-column: 3;
-      }
+      [type="checkbox"] {grid-column: 1;}
+      [type="number"] {grid-column: 3;}
+    }
+  }
+
+  .trait-row {
+    display: grid;
+    grid-template-columns: 28px 1fr 28px 28px 28px 28px 1fr 28px;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    label {
+      margin: 0 0.5em;
+    }
+    .left {
+      justify-self: end;
+    }
+    .right {
+      justify-self: start;
     }
   }
 
