--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -42,6 +42,12 @@
     }
   }
 
+  input[type="number"] {
+    height: 28px;
+    width: 28px;
+    text-align: center;
+  }
+
   input[type="checkbox"] {
     transform: scale(0.75)
   }
@@ -51,44 +57,14 @@
     height: 40px;
     margin-top: 10px;
     float: left;
-    text-align: center;
-    input {
-      width: 50px;
-      height: 28px;
-    }
-  }
-
-  .traits-and-skills {
-    position: relative;
-    input[type="number"] {
-      height: 28px;
-      width: 28px;
-      text-align: center;
-    }
-    div {
-      background-color: white;
-    }
+    width: max-content;
   }
 
   .general-skills, .traits, .combat-skills {
     outline: black solid 2px;
   }
 
-  .general-skills, .combat-skills {
-    position: absolute;
-    margin: 1em;
-    top: 0;
-  }
-
-  .general-skills {
-    left: 0;
-  }
-
   .traits {
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin: 1em auto;
     width: fit-content;
     .trait-plus {
       width: 20px;
@@ -110,19 +86,28 @@
     }
   }
 
-  .combat-skills {
-    right: 0;
-  }
-
   .skills {
     display: grid;
     grid-template-columns: 28px 1fr 28px;
     column-gap: 0.5em;
     justify-items: center;
     align-items: center;
+    width: fit-content;
     label {
       justify-self: end;
     }
+  }
+
+  .characteristics {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .flex-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: flex-start;
   }
 
   /* Sheet Tabs */
@@ -147,6 +132,7 @@
     .tab {
       height: 100%;
       overflow-y: auto;
+      padding: 0.25em;
     }
   }
 
