--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -10,7 +10,7 @@
   }
 
   .sheet-header {
-    flex: 0 0 100px;
+    flex: 0 0 150px;
     overflow: hidden;
     display: flex;
     flex-direction: row;
@@ -20,13 +20,13 @@
 
     .profile-img {
       flex: 0 0 100px;
-      height: 100px;
+      height: 150px;
       margin-right: 10px;
     }
 
     .header-fields {
       flex: 1;
-      height: 100px;
+      height: 150px;
     }
 
     h1.charname {
@@ -38,6 +38,29 @@
         width: 100%;
         height: 100%;
         margin: 0;
+      }
+    }
+
+    .personal {
+      width: 300px;
+      display: grid;
+      grid-template-columns: 2fr 3fr;
+      grid-gap: 0.2em;
+      align-content: space-between;
+      div {
+        display: flex;
+        align-items: baseline;
+      }
+      label {
+        font-size: 0.8em;
+        padding-right: 0.5em;
+      }
+      input {
+        height: 1.2em;
+        font-size: 1em;
+      }
+      #features {
+        grid-column: 1 / span 2;
       }
     }
   }
@@ -117,7 +140,7 @@
     border-bottom: 1px solid #AAA;
 
     .item {
-      line-height: 40px;
+      line-height: 20px;
       font-weight: bold;
     }
 
